fix: modified gitignore, moved twilio auth details into a config file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules/
-/mobile/node_modules/
-/server/node_modules/
-/client/node_modules/
 
-.idea
+mobile/node_modules
+server/config.js
+server/node_modules
+
+client/node_modules
