--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.11.2",
     "mongoose": "^3.8.23",
     "nodemon": "^1.3.7",
-    "twilio": "^1.10.0"
+    "twilio": "^1.10.0",
+    "cors": "^2.5.3"
   }
 }
