--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.12.0",
+    "browserify": "^9.0.3",
+    "cors": "^2.5.3",
     "express": "^4.11.2",
+    "gulp": "^3.8.11",
     "mongoose": "^3.8.23",
     "nodemon": "^1.3.7",
+    "react": "^0.12.2",
     "twilio": "^1.10.0",
-    "cors": "^2.5.3"
+    "vinyl-source-stream": "^1.0.0"
   }
 }
