--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^3.8.23",
     "nodemon": "^1.3.7",
     "react": "^0.12.2",
+    "react-router": "^0.12.4",
     "twilio": "^1.10.0",
     "vinyl-source-stream": "^1.0.0"
   }
